Try fix broken layout on Iphone
Попытка починить проблему #3 Проблема связана с поддержкой display: flow-root

Trying to fix issues #3
Problem is support for display: flow-root

--- a/styles/StyleSheet.css
+++ b/styles/StyleSheet.css
@@ -91,6 +91,12 @@ html {
     display: flow-root
 }
 
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .flowRoot div:nth-child(1) {
     float: left;
     margin: 5px 0 0
